--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dotenv": "^8.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-sitemap-xml": "^1.0.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "sendgrid": "^4.2.0"
+    "sendgrid": "^4.2.0",
+    "sitemap": "^2.2.0"
   }
 }
